[package]
name = "sway-relative-keyboard-rs"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
target-cpu = "native"
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
single-instance = "0.3.1"
swayipc = "2.7.2"
xdg = "2.2.0"
