[package]
name = "sway-relative-keyboard-rs"
version = "0.3.1"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
#lto = "fat"
opt-level = 3
#opt-level = "z"
panic = "abort"
strip = true
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
single-instance = "0.3.1"
swayipc = "2.7.2"
xdg = "2.2.0"
